src/main/gen/com/javampire/openscad/parser/OpenSCADParser.java
// This is a generated file. Not intended for manual editing.
package com.javampire.openscad.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.javampire.openscad.psi.OpenSCADTypes.*;
import static com.javampire.openscad.parser.OpenSCADParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class OpenSCADParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return openSCADFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(BLOCK_OBJ, BUILTIN_OBJ, EMPTY_OBJ, FOR_OBJ,
      IF_OBJ, MODULE_CALL_OBJ, OBJECT),
    create_token_set_(BACKGROUND_OP, BUILTIN_OP, DEBUG_OP, DISABLE_OP,
      MODIFIER_OP, MODULE_CALL_OP, OPERATOR, ROOT_OP),
    create_token_set_(AND_EXPR, ASSERT_EXPR, BUILTIN_EXPR, CONDITIONAL_EXPR,
      DIV_EXPR, EACH_EXPR, ECHO_EXPR, ELVIS_EXPR,
      EXPR, FUNCTION_CALL_EXPR, FUNCTION_LITERAL_EXPR, INDEX_EXPR,
      LIST_EXPR, LITERAL_EXPR, MINUS_EXPR, MODULO_EXPR,
      MUL_EXPR, OR_EXPR, PAREN_EXPR, PLUS_EXPR,
      POWER_EXPR, QUALIFICATION_EXPR, RANGE_EXPR, TEST_EXPR,
      UNARY_MIN_EXPR, UNARY_NEGATE_EXPR, UNARY_PLUS_EXPR, VARIABLE_REF_EXPR,
      VECTOR_EXPR),
  };

  /* ********************************************************** */
  // [ parameter_reference EQUALS ] expr
  public static boolean arg_assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG_ASSIGNMENT, "<arg assignment>");
    r = arg_assignment_0(b, l + 1);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, l, m, r, false, OpenSCADParser::recover_arg);
    return r;
  }

  // [ parameter_reference EQUALS ]
  private static boolean arg_assignment_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_0")) return false;
    arg_assignment_0_0(b, l + 1);
    return true;
  }

  // parameter_reference EQUALS
  private static boolean arg_assignment_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameter_reference(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPARENTH arg_assignment? ( COMMA arg_assignment )* RPARENTH
  public static boolean arg_assignment_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list")) return false;
    if (!nextTokenIs(b, LPARENTH)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARG_ASSIGNMENT_LIST, null);
    r = consumeToken(b, LPARENTH);
    p = r; // pin = 1
    r = r && report_error_(b, arg_assignment_list_1(b, l + 1));
    r = p && report_error_(b, arg_assignment_list_2(b, l + 1)) && r;
    r = p && consumeToken(b, RPARENTH) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // arg_assignment?
  private static boolean arg_assignment_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_1")) return false;
    arg_assignment(b, l + 1);
    return true;
  }

  // ( COMMA arg_assignment )*
  private static boolean arg_assignment_list_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arg_assignment_list_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arg_assignment_list_2", c)) break;
    }
    return true;
  }

  // COMMA arg_assignment
  private static boolean arg_assignment_list_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && arg_assignment(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // IDENTIFIER [EQUALS expr]
  public static boolean arg_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG_DECLARATION, "<arg declaration>");
    r = consumeToken(b, IDENTIFIER);
    r = r && arg_declaration_1(b, l + 1);
    exit_section_(b, l, m, r, false, OpenSCADParser::recover_arg);
    return r;
  }

  // [EQUALS expr]
  private static boolean arg_declaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_1")) return false;
    arg_declaration_1_0(b, l + 1);
    return true;
  }

  // EQUALS expr
  private static boolean arg_declaration_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPARENTH arg_declaration? ( COMMA arg_declaration? )* RPARENTH
  public static boolean arg_declaration_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_list")) return false;
    if (!nextTokenIs(b, LPARENTH)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARG_DECLARATION_LIST, null);
    r = consumeToken(b, LPARENTH);
    p = r; // pin = 1
    r = r && report_error_(b, arg_declaration_list_1(b, l + 1));
    r = p && report_error_(b, arg_declaration_list_2(b, l + 1)) && r;
    r = p && consumeToken(b, RPARENTH) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // arg_declaration?
  private static boolean arg_declaration_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_list_1")) return false;
    arg_declaration(b, l + 1);
    return true;
  }

  // ( COMMA arg_declaration? )*
  private static boolean arg_declaration_list_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_list_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arg_declaration_list_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arg_declaration_list_2", c)) break;
    }
    return true;
  }

  // COMMA arg_declaration?
  private static boolean arg_declaration_list_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_list_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && arg_declaration_list_2_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // arg_declaration?
  private static boolean arg_declaration_list_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_list_2_0_1")) return false;
    arg_declaration(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LPARENTH (expr | IDENTIFIER) (COMMA (expr | IDENTIFIER |  STRING_LITERAL))* RPARENTH
  public static boolean assert_arg_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_arg_list")) return false;
    if (!nextTokenIs(b, LPARENTH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPARENTH);
    r = r && assert_arg_list_1(b, l + 1);
    r = r && assert_arg_list_2(b, l + 1);
    r = r && consumeToken(b, RPARENTH);
    exit_section_(b, m, ASSERT_ARG_LIST, r);
    return r;
  }

  // expr | IDENTIFIER
  private static boolean assert_arg_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_arg_list_1")) return false;
    boolean r;
    r = expr(b, l + 1, -1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    return r;
  }

  // (COMMA (expr | IDENTIFIER |  STRING_LITERAL))*
  private static boolean assert_arg_list_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_arg_list_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!assert_arg_list_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assert_arg_list_2", c)) break;
    }
    return true;
  }

  // COMMA (expr | IDENTIFIER |  STRING_LITERAL)
  private static boolean assert_arg_list_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_arg_list_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && assert_arg_list_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expr | IDENTIFIER |  STRING_LITERAL
  private static boolean assert_arg_list_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_arg_list_2_0_1")) return false;
    boolean r;
    r = expr(b, l + 1, -1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, STRING_LITERAL);
    return r;
  }

  /* ********************************************************** */
  // ASSERT_KEYWORD assert_arg_list
  public static boolean assert_element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_element")) return false;
    if (!nextTokenIs(b, ASSERT_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSERT_KEYWORD);
    r = r && assert_arg_list(b, l + 1);
    exit_section_(b, m, ASSERT_ELEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // PERC
  public static boolean background_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "background_op")) return false;
    if (!nextTokenIs(b, PERC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PERC);
    exit_section_(b, m, BACKGROUND_OP, r);
    return r;
  }

  /* ********************************************************** */
  // LPARENTH if_element expr RPARENTH
  public static boolean bind_else_element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_else_element")) return false;
    if (!nextTokenIs(b, LPARENTH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPARENTH);
    r = r && if_element(b, l + 1);
    r = r && expr(b, l + 1, -1);
    r = r && consumeToken(b, RPARENTH);
    exit_section_(b, m, BIND_ELSE_ELEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE statement* RBRACE
  public static boolean block_obj(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_obj")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && block_obj_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, BLOCK_OBJ, r);
    return r;
  }

  // statement*
  private static boolean block_obj_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_obj_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_obj_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ABS_KEYWORD
  //                    | ACOS_KEYWORD
  //                    | ASIN_KEYWORD
  //                    | ATAN_KEYWORD
  //                    | ATAN2_KEYWORD
  //                    | CEIL_KEYWORD
  //                    | CHR_KEYWORD
  //                    | CONCAT_KEYWORD
  //                    | COS_KEYWORD
  //                    | CROSS_KEYWORD
  //                    | EXP_KEYWORD
  //                    | FLOOR_KEYWORD
  //                    | LEN_KEYWORD
  //                    | LN_KEYWORD
  //                    | LOG_KEYWORD
  //                    | LOOKUP_KEYWORD
  //                    | MAX_KEYWORD
  //                    | MIN_KEYWORD
  //                    | NORM_KEYWORD
  //                    | ORD_KEYWORD
  //                    | PARENT_MODULE_KEYWORD
  //                    | POW_KEYWORD
  //                    | RANDS_KEYWORD
  //                    | ROUND_KEYWORD
  //                    | SEARCH_KEYWORD
  //                    | SIGN_KEYWORD
  //                    | SIN_KEYWORD
  //                    | SQRT_KEYWORD
  //                    | STR_KEYWORD
  //                    | TAN_KEYWORD
  //                    | VERSION_KEYWORD
  //                    | VERSION_NUM_KEYWORD
  public static boolean builtin_expr_ref(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_expr_ref")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILTIN_EXPR_REF, "<builtin expr ref>");
    r = consumeToken(b, ABS_KEYWORD);
    if (!r) r = consumeToken(b, ACOS_KEYWORD);
    if (!r) r = consumeToken(b, ASIN_KEYWORD);
    if (!r) r = consumeToken(b, ATAN_KEYWORD);
    if (!r) r = consumeToken(b, ATAN2_KEYWORD);
    if (!r) r = consumeToken(b, CEIL_KEYWORD);
    if (!r) r = consumeToken(b, CHR_KEYWORD);
    if (!r) r = consumeToken(b, CONCAT_KEYWORD);
    if (!r) r = consumeToken(b, COS_KEYWORD);
    if (!r) r = consumeToken(b, CROSS_KEYWORD);
    if (!r) r = consumeToken(b, EXP_KEYWORD);
    if (!r) r = consumeToken(b, FLOOR_KEYWORD);
    if (!r) r = consumeToken(b, LEN_KEYWORD);
    if (!r) r = consumeToken(b, LN_KEYWORD);
    if (!r) r = consumeToken(b, LOG_KEYWORD);
    if (!r) r = consumeToken(b, LOOKUP_KEYWORD);
    if (!r) r = consumeToken(b, MAX_KEYWORD);
    if (!r) r = consumeToken(b, MIN_KEYWORD);
    if (!r) r = consumeToken(b, NORM_KEYWORD);
    if (!r) r = consumeToken(b, ORD_KEYWORD);
    if (!r) r = consumeToken(b, PARENT_MODULE_KEYWORD);
    if (!r) r = consumeToken(b, POW_KEYWORD);
    if (!r) r = consumeToken(b, RANDS_KEYWORD);
    if (!r) r = consumeToken(b, ROUND_KEYWORD);
    if (!r) r = consumeToken(b, SEARCH_KEYWORD);
    if (!r) r = consumeToken(b, SIGN_KEYWORD);
    if (!r) r = consumeToken(b, SIN_KEYWORD);
    if (!r) r = consumeToken(b, SQRT_KEYWORD);
    if (!r) r = consumeToken(b, STR_KEYWORD);
    if (!r) r = consumeToken(b, TAN_KEYWORD);
    if (!r) r = consumeToken(b, VERSION_KEYWORD);
    if (!r) r = consumeToken(b, VERSION_NUM_KEYWORD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (builtin_obj_ref arg_assignment_list SEMICOLON)
  //                 | (builtin_overridable_obj_ref arg_assignment_list SEMICOLON)
  //                 | (builtin_op block_obj)
  //                 | (builtin_op statement)
  //                 | (echo_element+ object)
  //                 | (assert_element+ object)
  public static boolean builtin_obj(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_obj")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILTIN_OBJ, "<builtin obj>");
    r = builtin_obj_0(b, l + 1);
    if (!r) r = builtin_obj_1(b, l + 1);
    if (!r) r = builtin_obj_2(b, l + 1);
    if (!r) r = builtin_obj_3(b, l + 1);
    if (!r) r = builtin_obj_4(b, l + 1);
    if (!r) r = builtin_obj_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
